changing primary block from body to content

--- a/txrx/templates/about.html
+++ b/txrx/templates/about.html
@@ -1,5 +1,5 @@
 {% extends request.TEMPLATE %}{% load copy %}
-{% block body %}
+{% block content %}
 <ol class="feed">
   <li>
     <h1>About TX/RX Labs</h1>
