--- a/txrx/templates/classes.html
+++ b/txrx/templates/classes.html
@@ -1,7 +1,7 @@
 {% extends request.TEMPLATE %}
 {% load thumbnail photo %}
 
-{% block body %}
+{% block content %}
 {% include "widgets/filters.html" %}
 <ol class="feed">
 {% include "widgets/class-feed.html" %}
