--- a/txrx/templates/instructors.html
+++ b/txrx/templates/instructors.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load thumbnail photo %}
 
-{% block body %}
+{% block content %}
 <section>
   <h1>Course Instructors</h1>
   <ol class="feed">{% for profile in instructors %}
