--- a/txrx/templates/comming_soon.html
+++ b/txrx/templates/comming_soon.html
@@ -1,5 +1,5 @@
 {% extends request.TEMPLATE %}
-{% block body %}
+{% block content %}
 <ol class="feed">
   <li style="height: 600px;">
     <h1>COMMING SOON!!!!1!
