--- a/txrx/templates/feed.html
+++ b/txrx/templates/feed.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load thumbnail photo %}
-{% block body %}
+{% block content %}
 {% include "widgets/filters.html" %}
 <ol class="feed">
 {% for item in feed %}
