--- a/txrx/templates/join-us.html
+++ b/txrx/templates/join-us.html
@@ -1,5 +1,5 @@
 {% extends request.TEMPLATE %}{% load copy %}
-{% block body %}
+{% block content %}
 <h1>Become a Member of TX/RX Labs</h1>
 {{ "join_us-top"|print_copy }}
 <div class="clear"></div>
