--- a/txrx/templates/members.html
+++ b/txrx/templates/members.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load thumbnail photo %}
 
-{% block body %}
+{% block content %}
 {% for membership in memberships %}
 <section>
   <h1>{{ membership.name }}</h1>
