Added to the about page

--- a/txrx/templates/about.html
+++ b/txrx/templates/about.html
@@ -5,5 +5,81 @@
     <h1>About TX/RX Labs</h1>
     {{ "about-body"|print_copy }}
   </li>
+
+  <li>
+    <h2>Location 2010 Commerce St. Houston, Tx 77002</h2>
+<strong>Tx/Rx Labs is Houston's Hackerspace.</strong> We are a project-based team of makers with backgrounds in the creative arts: electronic circuitry, music composition, 3D printing, computer science and security, screenprinting, fashion design, and even haute cuisine.
+
+Visit us on Open House Fridays at 7pm to:
+<ul class="bulleted">
+    <li>Visit with our members.</li>
+    <li>Learn about our upcoming classes and workshops.</li>
+    <li>See exciting technical demonstrations.</li>
+    <li>Share your own projects.</li>
+    <li>Enjoy some home cooking.</li>
+    <li>Discuss the latest developments in science and technology.</li>
+    <li>Hang out with a friendly crowd of technology and craft enthusiasts.</li>
+</ul>
+</li>
+
+<li>
+<h3>Our Goals </h3>
+
+Our goals are to bring creative people together, to serve as an incubator for imaginative solutions for everyday problems, to make opaque scientific and technical concepts accessible to everyone through education, and to provide much-needed services to our community, made possible by the skills and passion of our membership.
+</li>
+
+<li>
+<h3>How to Participate</h3>
+
+Most of our events are open and available to the general public. Access to some of our lab space and tools is limited to our members who have undergone training in the safe use of our lab tools and safety equipment. Information on our upcoming events is available on our calendar.
+
+You can become a member by coming to one of our Open House Fridays and telling one of our officers or directors that you want to be a member.  The membership fee gets you access to tools, collective wisdom, and a racous list-serve!  We have been known to stay late and turn the volume to eleven.  We look forward to welcoming you to Tx/Rx Labs.
+</li>
+
+<li>
+<h3>Why TX/RX Labs?</h3>
+
+Imagine how much innovation could occur if the creative community in Houston had access to the tools and knowledge needed to bring its ideas to fruition.  We believe that we must revive the tradition of design and manufacturing in America after decades of neglect and decline.  Many of America's greatest industries began in inspired moments in garage workshops.  We hope to provide you with that workshop through our classes and other educational programs, collective wisdom, and lab space.
+</li>
+
+<li>
+<h3>How to Help</h3>
+<ul class="bulleted">
+    <li>Become a member.  Our greatest resource is the diversity and creativity of our members, and we are always open to new perspectives and disciplines.</li>
+    <li>Volunteer!  We need people to help spread the word about what we are trying to do.  Email us at txrxlabs@googlegroups.com or visit us on Open House Fridays and we will find a way for you to help.</li>
+    <li>Make a cash donation.</li>
+    <li>Donate tools, computers, electronics.  Have a tool you don't use that often?  We can use it!</li>
+</ul>
+</li>
+
+<li>
+<h3>More Information</h3>
+<ul class="bulleted">
+    <li>Tx/Rx Labs :  <a href="../">www.txrxlabs.org</a> , <a href="http://www.meetup.com/TXRXLabs/">http://www.meetup.com/TXRXLabs/</a></li>
+    <li>Weekly photos can be found at <a href="http://www.meetup.com/TXRXLabs/photos/">http://www.meetup.com/TXRXLabs/photos/</a></li>
+    <li>Tx/Rx Labs Google Group: <a href="http://groups.google.com/group/txrxlabs">http://groups.google.com/group/txrxlabs</a></li>
+    <li>Mailing List:  <a href="mailto:txrxlabs@googlegroups.com">txrxlabs@googlegroups.com</a></li>
+    <li><a href="http://www.flickr.com/photos/techcollective/">Flickr Photostream</a></li>
+    <li><a href="http://www.flickr.com/groups/technologycollective/">Tx/Rx Flickr Group</a></li>
+    <li>Hackerspaces : <a href="http://www.hackerspaces.org/">www.hackerspaces.org</a></li>
+</ul>
+</li>
+
+<li>
+<div><h3>Contact:</h3></div>
+<div><strong></strong>
+<ul class="bulleted">
+    <li>txrxlabs@gmail.com</li>
+    <li>2010A Commerce St. Houston, Tx 77002</li>
+</ul>
+</div>
+
+</li>
+
+
+
 </ol>
+
+
+
 {% endblock %}
