--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -11,8 +11,7 @@
     
   {# Local CSS #}
   {# Site Design CSS #}
-  <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}base.css" />
-  {#<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}themes.css" />#}
+  <link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}base.less" />
   <!--[if IE 6]>
   <link rel="stylesheet" type="text/css" href="/static/design/ie6.css"/>
   <![endif]-->
@@ -23,6 +22,7 @@
   <link rel="stylesheet" type="text/css" href="/static/design/ie8.css"/>
   <![endif]-->
     
+  <script type="text/javascript" src="{{ STATIC_URL }}js/less.js"></script>
   <script type="text/javascript" src="{{ STATIC_URL }}js/simpleCart.js"></script>
   <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-1.7.1.min.js"></script>
   <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.simplemodal.js"></script>
