removing photo tag

--- a/txrx/templates/feed.html
+++ b/txrx/templates/feed.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load thumbnail photo %}
+{% load thumbnail %}
 {% block content %}
 {% include "widgets/filters.html" %}
 <ol class="feed">
