--- a/txrx/templates/tools.html
+++ b/txrx/templates/tools.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load thumbnail photo %}
+{% load thumbnail %}
 
 {% block content %}
 <ol class="labs">{% for lab in labs %}
