--- a/course/templates/course/classes.html
+++ b/course/templates/course/classes.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load photo thumbnail %}
+{% load thumbnail %}
 
 {% block content %}
 {#{% include "widgets/filters.html" %}#}
