--- a/txrx/templates/members.html
+++ b/txrx/templates/members.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load thumbnail photo %}
+{% load thumbnail %}
 
 {% block content %}
 {% for membership in memberships %}
