--- a/main/static/base.less
+++ b/main/static/base.less
@@ -237,6 +237,16 @@ a { color: black; display: inline-block; }
   .box { height: 0; overflow: hidden; }
 }
 
+#checkout-box {
+  background: white;
+  border: 4px double black;
+  bottom: 0;
+  padding: 10px;
+  position: fixed;
+  right: 100px;
+  width: 100px;
+}
+
 /* modals */
 .modal {
   background-color: white;
