Fixed the requirements conflict

--- a/course/templates/course/classes.html
+++ b/course/templates/course/classes.html
@@ -3,7 +3,8 @@
 
 {% block main %}
 {#{% include "widgets/filters.html" %}#}
-<dic id="courses">
+<h1>Classes for {{ term.name }}</h1>
+<div id="courses">
   <table class="feed">
     <tr>
       <th>Details</th>
