--- a/course/templates/course/classes.html
+++ b/course/templates/course/classes.html
@@ -75,7 +75,7 @@
     Total: <span class="simpleCart_finalTotal"></span>
   </div>
   <div>
-    <a href="javascript:$('#cart-modal').modal();">Checkout</a>
+    <a class="blue" href="javascript:$('#cart-modal').modal();">Checkout</a>
 </div>
 <div class="modal" id="cart-modal" style="display: none;">
   <div style="position: relative;">
