--- a/main/static/base.less
+++ b/main/static/base.less
@@ -24,7 +24,7 @@ a img { border: 0; }
 
 /* global site-specific */
 body { background: #333; }
-a { color: black; display: inline-block; }
+a { display: inline-block; }
 
 #wrapper, .header {
   background: white;
@@ -209,7 +209,8 @@ a { color: black; display: inline-block; }
 
 /* course */
 #courses .feed {
-  width: 100%;
+  margin: 15px;
+  width: 950px;
 }
 
 #courses .feed {
@@ -219,6 +220,7 @@ a { color: black; display: inline-block; }
 
 #courses .showDetails {
   text-align: center;
+  width: 50px;
   a:before {
     content: "+";
   }
