--- a/txrx/templates/header.html
+++ b/txrx/templates/header.html
@@ -1,5 +1,5 @@
 <div class="header">
-  <a href="/home">
+  <a href="/">
     <img src="/static/bw-logo.png" />
   </a>
   <div class="nav" id="nav">{% for n in nav %}<a href="/{{ n|slugify }}" class="{{ n|slugify}}{% if n == current %} current{% endif %}{% if forloop.last %} no-border {% endif %}">{{ n|upper }}</a>{% endfor %}</div>
@@ -20,7 +20,7 @@
     {% with form=auth_form %}{% include "widgets/login-form.html" %}{% endwith %}
     {% if not request.user.is_authenticated %}
     <div>
-      <a href="/accounts/register/">Register</a>
+      <a class="blue" href="/accounts/register/">Register</a>
     </div>
     {% endif %}
   </div>
