--- a/txrx/templates/header.html
+++ b/txrx/templates/header.html
@@ -11,7 +11,7 @@
     </a>
     <a href="/logout?next={{ request.path }}">logout</a>
     {% if user.is_staff %}<a href="/admin/">admin</a>{% endif %}
-    <a href="#" onclick="$.modal('<iframe src=\'/survey/\' width=\'700\' height=\'550\' style=\'border: 0; overflow: hidden;\'>'); return false;">Survey</a>
+    {#<a href="#" onclick="$.modal('<iframe src=\'/survey/\' width=\'700\' height=\'550\' style=\'border: 0; overflow: hidden;\'>'); return false;">Survey</a>#}
     {% else %}
     <a href="/login" onclick="showLogin(); return false;">login/register</a>
     {% endif %}
